refactor: clean up code to follow best practices